# chippa

./: .gitignore  CMakeLists.txt  readme.md
src/: UI.cpp  UI.hpp  cli_core.hpp  database.hpp  entities.hpp  genmain.cpp  helpers.cpp  helpers.hpp  main.cpp  seed_database.cpp  ui_elements.cpp  ui_elements.hpp  utilities.hpp
src/auth/: auth.cpp  auth.hpp  user.hpp
src/database/: database.cpp  database.hpp  entities.hpp  user.cpp  user.hpp
src/platform/: common.cpp  common.hpp
src/terminal/: cli.cpp  cli.hpp  formatter.cpp  formatter.hpp
src/ui/: auth.cpp  common.hpp  elements.hpp  staff.cpp  student.cpp
